Fixed spacing issue on market page.

--- a/Website/public/css/marketplace.css
+++ b/Website/public/css/marketplace.css
@@ -1,7 +1,3 @@
-main {
-	margin-top: 58px;
-}
-
 #sidebar {
 	height: 1000px;
 	background-color: grey;
